padding fix on index on mobile

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -88,3 +88,7 @@
             padding-right: 0;
         }
 }
+
+@media screen and (max-width: 768px) {
+    .desktop {display: none;}  
+}
